<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.feature.loginPage.LoginActivity">

    <TextView
        android:layout_marginVertical="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:hint="@string/enter_your_email"
        android:background="@drawable/custom_edit_text"
        style="@style/LoginEditText"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        style="@style/LoginEditText"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_gravity="center_horizontal"
        android:indeterminateTint="@color/white"
        android:visibility="invisible" />
</LinearLayout>