<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33000000">

    <ImageButton
        android:id="@+id/ibPrev"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_background"
        android:contentDescription="@string/previous_video"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/exo_rew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_background"
        android:contentDescription="@string/next_video"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/exo_ffwd"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exo_rew"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_background"
        android:contentDescription="@string/rewind"
        android:src="@drawable/ic_replay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivPlayPause"
        app:layout_constraintStart_toEndOf="@id/ibPrev"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exo_ffwd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_background"
        android:contentDescription="@string/fast_forward"
        android:src="@drawable/ic_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ibNext"
        app:layout_constraintStart_toEndOf="@id/ivPlayPause"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPlayPause"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:alpha="0"
        android:background="@drawable/round_background"
        android:padding="8dp"
        android:src="@drawable/ic_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurrentDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/start_duration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/exo_progress"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTotalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/exo_progress"
        app:layout_constraintStart_toEndOf="@id/tvCurrentDuration" />

    <ImageView
        android:id="@+id/ivToggleFullscreen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_background"
        android:padding="2dp"
        android:src="@drawable/ic_fullscreen"
        app:layout_constraintBottom_toTopOf="@id/exo_progress"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.media3.ui.DefaultTimeBar
        android:id="@+id/exo_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:buffered_color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:played_color="@color/bright_red"
        app:unplayed_color="@color/light_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>