<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade"
    android:orientation="vertical"
    tools:context=".feature.detailsPage.DetailsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivMovieThumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_play_red" />
        </androidx.cardview.widget.CardView>

        <androidx.media3.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_shade"
            app:controller_layout_id="@layout/controller_layout"
            app:hide_on_touch="true"
            app:show_buffering="always"
            app:show_timeout="4000"
            app:animation_enabled="false"
            app:use_controller="true" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMovieTitle"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing=".1"
                android:text="@string/hello_blank_fragment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/tvMovieDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="152 minutes"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_duration" />

                <TextView
                    android:id="@+id/tvMovieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="7.7"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_star_white" />
            </LinearLayout>

            <TextView
                style="@style/SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/synopsis" />

            <TextView
                android:id="@+id/tvMovieSynopsis"
                style="@style/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/synopsis_description" />

            <TextView
                style="@style/SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/synopsis" />

            <TextView
                style="@style/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/synopsis_description" />

            <TextView
                style="@style/SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/related_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRelatedMovieContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>